<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".SoundMemoryGame">

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gameBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gameBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/greenCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="100dp">

            <Button
                android:id="@+id/btn_red"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/blood_red"
                android:importantForAccessibility="no"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/blueCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="100dp">

            <Button
                android:id="@+id/btn_blue"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/dark_blue"
                android:importantForAccessibility="no"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/redCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="100dp">

            <Button
                android:id="@+id/btn_green"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/dark_green"
                android:importantForAccessibility="no"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/yellowCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="100dp">

            <Button
                android:id="@+id/btn_yellow"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/dark_yellow"
                android:importantForAccessibility="no"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="95dp"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/start"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/back_to_menu"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameBoard" />

</androidx.constraintlayout.widget.ConstraintLayout>